<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bac"
    tools:context=".Levels.EasyActivity">

    <TextView
        android:id="@+id/t"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:text="@string/try_counter"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/truu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/_0"
        android:layout_marginStart="8dp"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/t"
        app:layout_constraintTop_toTopOf="parent"/>

    <View
        android:id="@+id/gg"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.09" />

    <ImageView
        android:id="@+id/img1"
        android:layout_width="@dimen/easy"
        android:layout_height="@dimen/easy"
        android:background="@drawable/img222"
        app:layout_constraintBottom_toTopOf="@id/img4"
        app:layout_constraintEnd_toStartOf="@id/img2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gg" />

    <ImageView
        android:id="@+id/img2"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:background="@drawable/img222"
        app:layout_constraintBottom_toTopOf="@id/img5"
        app:layout_constraintEnd_toStartOf="@id/img3"
        app:layout_constraintStart_toEndOf="@id/img1"
        app:layout_constraintTop_toBottomOf="@id/gg" />

    <ImageView
        android:id="@+id/img3"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:background="@drawable/img222"
        app:layout_constraintBottom_toTopOf="@id/img6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/img2"
        app:layout_constraintTop_toBottomOf="@id/gg" />

    <ImageView
        android:id="@+id/img4"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:background="@drawable/img222"
        app:layout_constraintBottom_toTopOf="@id/img7"
        app:layout_constraintEnd_toStartOf="@id/img5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img1" />

    <ImageView
        android:id="@+id/img5"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:background="@drawable/img222"
        app:layout_constraintBottom_toTopOf="@id/img8"
        app:layout_constraintEnd_toStartOf="@id/img6"
        app:layout_constraintStart_toEndOf="@id/img4"
        app:layout_constraintTop_toBottomOf="@id/img2" />

    <ImageView
        android:id="@+id/img6"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:background="@drawable/img222"
        app:layout_constraintBottom_toTopOf="@id/img9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/img5"
        app:layout_constraintTop_toBottomOf="@id/img3" />

    <ImageView
        android:id="@+id/img7"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:background="@drawable/img222"
        app:layout_constraintBottom_toTopOf="@id/img10"
        app:layout_constraintEnd_toStartOf="@id/img8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img4" />

    <ImageView
        android:id="@+id/img8"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:background="@drawable/img222"
        app:layout_constraintBottom_toTopOf="@id/img11"
        app:layout_constraintEnd_toStartOf="@id/img9"
        app:layout_constraintStart_toEndOf="@id/img7"
        app:layout_constraintTop_toBottomOf="@id/img5" />

    <ImageView
        android:id="@+id/img9"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:background="@drawable/img222"
        app:layout_constraintBottom_toTopOf="@id/img12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/img8"
        app:layout_constraintTop_toBottomOf="@id/img6" />

    <ImageView
        android:id="@+id/img10"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:background="@drawable/img222"
        app:layout_constraintBottom_toTopOf="@id/g"
        app:layout_constraintEnd_toStartOf="@id/img11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img7" />

    <ImageView
        android:id="@+id/img11"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:background="@drawable/img222"
        app:layout_constraintBottom_toTopOf="@id/g"
        app:layout_constraintEnd_toStartOf="@id/img12"
        app:layout_constraintStart_toEndOf="@id/img10"
        app:layout_constraintTop_toBottomOf="@id/img8" />

    <ImageView
        android:id="@+id/img12"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:background="@drawable/img222"
        app:layout_constraintBottom_toTopOf="@id/g"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/img11"
        app:layout_constraintTop_toBottomOf="@id/img9" />

    <View
        android:id="@+id/g"
        android:layout_width="match_parent"
        android:layout_height="0.4dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8" />

    <com.startapp.sdk.ads.banner.Banner
        android:id="@+id/startapp_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <com.startapp.sdk.ads.banner.Banner
        android:id="@+id/startapp_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>